Shape size of the point, spot and area light not behaving correctly when animated in EEVEE and Cycles #102853

Closed
opened 2022-11-29 16:39:57 +01:00 by Thom · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.25

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-28 23:04, hash: 3d1594417b

Short description of error
Shape size of the point, spot and area light seems like they are depending on each other when keyed.
When switching from a spot to an Area (for example) it is impossible to change the value
of "Size X" if it was previously keyed in the spot. Changing this value makes the "Graph editor" and the "object data properties" display the change correctly like it was successfully keyed but changing the frame makes it go back to the "Spot Radius" keyed before in the timeline.
The way around is to change the light to spot, change the "radius size" value to what you want your rectangular "Size X" you want and change back to rectangle and then it works.

It seems the bug does not occur (or at least stay) when I'm moving with the mouse in the timeline, it is only the case with shortcuts or buttons to navigate between keys/frames.
Still the bug exist and we can see it by making a render, the frames where the type of light changes is bugged, different from the next ones.
Frame 10
test0011.png
Frame 11
test0010.png
Frame 15
test0016.png
Frame 16
test0015.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  • Open provided file
  • Go to frame 10
  • Select the Light
  • Use a shortcut or the button to jump to previous key/previous frame
  • Use a shortcut or the button to jump to next key/next frame

Bug_Repport_AreaRectangular.blend

Hope it is detailed enough, have a good day and thank you for your work ;) .

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.25 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-28 23:04, hash: `3d1594417b` **Short description of error** Shape size of the point, spot and area light seems like they are depending on each other when keyed. When switching from a spot to an Area (for example) it is impossible to change the value of "Size X" if it was previously keyed in the spot. Changing this value makes the "Graph editor" and the "object data properties" display the change correctly like it was successfully keyed but changing the frame makes it go back to the "Spot Radius" keyed before in the timeline. The way around is to change the light to spot, change the "radius size" value to what you want your rectangular "Size X" you want and change back to rectangle and then it works. It seems the bug does not occur (or at least stay) when I'm moving with the mouse in the timeline, it is only the case with shortcuts or buttons to navigate between keys/frames. Still the bug exist and we can see it by making a render, the frames where the type of light changes is bugged, different from the next ones. Frame 10 ![test0011.png](https://archive.blender.org/developer/F13979199/test0011.png) Frame 11 ![test0010.png](https://archive.blender.org/developer/F13979200/test0010.png) Frame 15 ![test0016.png](https://archive.blender.org/developer/F13979204/test0016.png) Frame 16 ![test0015.png](https://archive.blender.org/developer/F13979205/test0015.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] - Open provided file - Go to frame 10 - Select the Light - Use a shortcut or the button to jump to previous key/previous frame - Use a shortcut or the button to jump to next key/next frame [Bug_Repport_AreaRectangular.blend](https://archive.blender.org/developer/F13979212/Bug_Repport_AreaRectangular.blend) Hope it is detailed enough, have a good day and thank you for your work ;) .
Author

Added subscriber: @The-Rope-Dude

Added subscriber: @The-Rope-Dude

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

These properties share the same location in memory.
There are some small advantages to doing so.
They can be separated to solve this problem. But that would require other changes like versioning.
Not sure it's really worth the change.
The workaround seems less impactful.

These properties share the same location in memory. There are some small advantages to doing so. They can be separated to solve this problem. But that would require other changes like versioning. Not sure it's really worth the change. The workaround seems less impactful.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

After some further investigation with Germano and some input from Bastien, we decided that this should be fixed by having each RNA variable point to a different variable in DNA.
Otherwise you run into issues like this where two different RNA variables drive different settings in unintuitive ways.

After some further investigation with Germano and some input from Bastien, we decided that this should be fixed by having each RNA variable point to a different variable in DNA. Otherwise you run into issues like this where two different RNA variables drive different settings in unintuitive ways.

This issue was referenced by fbc2c4c331

This issue was referenced by fbc2c4c3317da40bc0c540fe31f41fe3f7802e48

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2023-01-04 16:58:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102853
No description provided.