source/blender/io/collada/DocumentImporter.cpp
@@ -1019,6 +1019,7 @@ bool DocumentImporter::writeLight(const COLLADAFW::Light *light)
     et->setData("bias", &(lamp->bias));
     et->setData("bufsize", &(lamp->bufsize));
     et->setData("buffers", &(lamp->buffers));
+    et->setData("radius", &(lamp->radius));
     et->setData("area_shape", &(lamp->area_shape));
     et->setData("area_size", &(lamp->area_size));
     et->setData("area_sizey", &(lamp->area_sizey));
