source/blender/io/collada/LightExporter.cpp
@@ -132,6 +132,7 @@ bool LightsExporter::exportBlenderProfile(COLLADASW::Light &cla, Light *la)
   cla.addExtraTechniqueParameter("blender", "bufsize", la->bufsize);
   cla.addExtraTechniqueParameter("blender", "samp", la->samp);
   cla.addExtraTechniqueParameter("blender", "buffers", la->buffers);
+  cla.addExtraTechniqueParameter("blender", "radius", la->radius);
   cla.addExtraTechniqueParameter("blender", "area_shape", la->area_shape);
   cla.addExtraTechniqueParameter("blender", "area_size", la->area_size);
   cla.addExtraTechniqueParameter("blender", "area_sizey", la->area_sizey);
